# thekursova

./: .gitignore  README.md  infer.py  manual_poems.json  monitor.py  pain_mediapipe.py  pain_multimodal.py  requirements.txt  setup.cfg  train.py
poetry_ai/: cli.py  data.py  generation.py  training.py
src/: data.py  face_detector.py  hair_filter.py  mediapipe_face.py  mediapipe_pose.py  micro_motion.py  overlay.py  pain_rules.py  visibility_filter.py
