[metadata]
name = poetry-ai
version = 0.1.0
description = Ukrainian poetry scraping, training, and generation CLI
author = AI Assistant
license = MIT

[options]
packages = find:
install_requires =
    beautifulsoup4
    datasets
    requests
    torch
    transformers
python_requires = >=3.9
include_package_data = True

[options.extras_require]
train =
    accelerate
    bitsandbytes

[options.package_data]
* = *.txt, *.md
